--- a/src/css/main.css
+++ b/src/css/main.css
@@ -183,7 +183,7 @@ p {
 /* social links */
 .social-links {
   margin-top: 2rem;
-  width: 15rem;
+  width: 9rem; /* 15rem with 5 icons */
   display: flex;
   justify-content: space-between;
 }
