--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,21 +7,21 @@ Variables
 :root {
   /* dark shades of primary color*/
   /* --clr-primary-1: hsl(43, 86%, 17%); */
-  --clr-primary-1: hsl(184, 91%, 17%);
-  --clr-primary-2: hsl(185, 84%, 25%);
-  --clr-primary-3: hsl(185, 81%, 29%);
-  --clr-primary-4: hsl(184, 77%, 34%);
-  --clr-primary-5: #2caeba;
+  --clr-primary-1: hsl(214, 91%, 17%);
+  --clr-primary-2: hsl(214, 84%, 25%);
+  --clr-primary-3: hsl(214, 81%, 29%);
+  --clr-primary-4: hsl(213, 77%, 34%);
+  --clr-primary-5: #2c36ba;
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(185, 57%, 50%);
-  --clr-primary-7: hsl(184, 65%, 59%);
-  --clr-primary-8: hsl(184, 80%, 74%);
-  --clr-primary-9: hsl(185, 94%, 87%);
-  --clr-primary-10: hsl(186, 100%, 94%);
+  --clr-primary-6: hsl(214, 57%, 50%);
+  --clr-primary-7: hsl(213, 65%, 59%);
+  --clr-primary-8: hsl(213, 80%, 74%);
+  --clr-primary-9: hsl(214, 94%, 87%);
+  --clr-primary-10: hsl(214, 100%, 94%);
   /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
+  --clr-grey-1: hsl(215, 61%, 16%);
+  --clr-grey-3: hsl(215, 34%, 30%);
+  --clr-grey-4: hsl(215, 28%, 39%);
   /* grey used for paragraphs */
   --clr-grey-5: hsl(210, 22%, 49%);
   --clr-grey-8: hsl(210, 31%, 80%);
@@ -549,7 +549,7 @@ Jobs
   background: transparent;
   border-color: transparent;
   text-transform: capitalize;
-  font-size: 1.25rem;
+  font-size: 1rem;
   letter-spacing: var(--spacing);
   margin: 0 0.5rem;
   transition: var(--transition);
